--- a/анимация перемещения частиц по гексагональной сетке/версия 5/style.css
+++ b/анимация перемещения частиц по гексагональной сетке/версия 5/style.css
@@ -1,3 +1,10 @@
+body{
+    width: 100% !important;
+    height: 100vh !important;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
 canvas{
     background: rgb(0,0,0);
 }
